@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2003/05/16 21:27:56 jdolecek Exp $
+$NetBSD: distinfo,v 1.3 2003/05/23 21:32:25 jdolecek Exp $
 
-SHA1 (./opera-7.11-20030512.1-static-qt.i386.rpm) = 82b729f74aee8818c446e82969e63a07de4f1149
-Size (./opera-7.11-20030512.1-static-qt.i386.rpm) = 5423384 bytes
+SHA1 (./opera-7.11-20030515.1-static-qt.i386.rpm) = ba3ff41e21833e26430446e3e57e17b859749983
+Size (./opera-7.11-20030515.1-static-qt.i386.rpm) = 5279902 bytes
